Remove Lovable references and update project branding

--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Netcore Sales Conference 2025 - Bangkok Edition</title>
-    <meta name="description" content="Netcore Sales Conference 2025 - Bangkok Edition | GAIN: Fueling Growth. Forging Connections." />
-    <meta name="author" content="Netcore Cloud Pvt. Ltd." />
-
-    <meta property="og:title" content="Netcore Sales Conference 2025 - Bangkok Edition" />
-    <meta property="og:description" content="Netcore Sales Conference 2025 - Bangkok Edition | GAIN: Fueling Growth. Forging Connections." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
+    <title>GAIN Bangkok</title>
+    <meta name="description" content="Official website for GAIN Bangkok event" />
+    <meta property="og:title" content="GAIN Bangkok" />
+    <meta property="og:description" content="Official website for GAIN Bangkok event" />
+    <meta property="og:image" content="https://netcorebangkok.netlify.app/preview.jpg" />
+    <meta property="og:url" content="https://netcorebangkok.netlify.app/" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="GAIN Bangkok" />
+    <meta name="twitter:description" content="Official website for GAIN Bangkok event" />
+    <meta name="twitter:image" content="https://netcorebangkok.netlify.app/preview.jpg" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
