Add custom SVG preview image for social media sharing

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="description" content="Official website for GAIN Bangkok event" />
     <meta property="og:title" content="GAIN Bangkok" />
     <meta property="og:description" content="Official website for GAIN Bangkok event" />
-    <meta property="og:image" content="https://netcorebangkok.netlify.app/preview.jpg" />
+    <meta property="og:image" content="https://netcorebangkok.netlify.app/preview.svg" />
     <meta property="og:url" content="https://netcorebangkok.netlify.app/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="GAIN Bangkok" />
     <meta name="twitter:description" content="Official website for GAIN Bangkok event" />
-    <meta name="twitter:image" content="https://netcorebangkok.netlify.app/preview.jpg" />
+    <meta name="twitter:image" content="https://netcorebangkok.netlify.app/preview.svg" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
