Update favicon to favicon.jpg and use local preview.svg for URL preview

--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/jpg" href="/favicon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GAIN Bangkok</title>
     <meta name="description" content="Official website for GAIN Bangkok event" />
     <meta property="og:title" content="GAIN Bangkok" />
     <meta property="og:description" content="Official website for GAIN Bangkok event" />
-    <meta property="og:image" content="https://netcorebangkok.netlify.app/preview.svg" />
+    <meta property="og:image" content="/preview.svg" />
     <meta property="og:url" content="https://netcorebangkok.netlify.app/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="GAIN Bangkok" />
     <meta name="twitter:description" content="Official website for GAIN Bangkok event" />
-    <meta name="twitter:image" content="https://netcorebangkok.netlify.app/preview.svg" />
+    <meta name="twitter:image" content="/preview.svg" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
